# course_work

./: .env.example  .flake8  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
docker/nginx/: default.conf
src/: celerybeat-schedule-shm  celerybeat-schedule-wal
src/config/: settings.py  urls.py
src/habits/: admin.py  models.py  serializers.py  tasks.py  telegram.py  urls.py  views.py
src/habits/migrations/: 0001_initial.py  0002_habit_last_notified_at.py
src/habits/tests/: test_api.py  test_validators.py
src/users/: admin.py  models.py  serializers.py  urls.py  views.py
src/users/migrations/: 0001_initial.py  0002_user_telegram_chat_id.py  0003_alter_user_managers_remove_user_username_and_more.py
